Support deopt type "debugger" for V8

--- a/lib/src/ui/deopt-links.html
+++ b/lib/src/ui/deopt-links.html
@@ -48,6 +48,14 @@
         background-color: #F1C40F;
       }
 
+      .x-deopt-link-debugger > a {
+        background-color: #827717;
+      }
+
+      .x-deopt-link-debugger > a:hover {
+        background-color: #9E9D24;
+      }
+
       .x-deopt-link-soft > a {
         background-color: #8E44AD;
       }
