--- a/lib/src/ui/source-pane.html
+++ b/lib/src/ui/source-pane.html
@@ -66,6 +66,14 @@
         color: #F1C40F;
       }
 
+      code-mirror::shadow .deopt-bookmark-debugger {
+        color: #827717;
+      }
+
+      code-mirror::shadow .deopt-bookmark-debugger:hover {
+        color: #9E9D24;
+      }
+
       code-mirror::shadow .deopt-bookmark-soft {
         color: #8E44AD;
       }
