Display meaningful error if source annotation fails.
Make source annotator slightly more resilent and avoid corrupting IR state if we
failed to map source locations due to source and position information mismatch.

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -20,6 +20,16 @@
   <template>
     <link rel="stylesheet" type="text/css" href="hydra.css">
 
+    <paper-toast text="WARNING: file contains CRLF line endings! Some features might not work."
+                 duration="3600000"
+                 opened="{{crlfDetected}}">
+    </paper-toast>
+
+    <paper-toast text="ERROR: Source does not match IR. See console for more details."
+                 duration="3600000"
+                 opened="{{sourceAnnotatorFailed}}">
+    </paper-toast>
+
     <paper-toast text="{{progressAction}} {{progressUrl}}" duration="3600000">
       <template if="{{progressValue != null}}">
         <paper-progress value="{{progressValue}}"></paper-progress>
