Move bootstrap stuff into a separate package

--- a/irhydra/web/index.html
+++ b/irhydra/web/index.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="css/hydra.css">
 
     <link rel="stylesheet" href="deps/fa/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 
     <script src="deps/spin.min.js"></script>
 
@@ -25,7 +23,11 @@
 
     <script src="deps/jquery/js/jquery-2.0.3.js"></script>
     <script src="deps/jquery/js/jquery-ui-1.10.4.js"></script>
-    <script src="bootstrap/js/bootstrap.js"></script>
+
+
+    <link rel="stylesheet" href="packages/bootstrap/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="packages/bootstrap/assets/css/bootstrap-theme.min.css">
+    <script src="packages/bootstrap/assets/js/bootstrap.js"></script>
 
     <script src="deps/bunzip2.js"></script>
   </head>
