Move more ui utilities into ui_utils package

--- a/irhydra/lib/src/ui/hydra.html
+++ b/irhydra/lib/src/ui/hydra.html
@@ -7,7 +7,7 @@
 <link rel="import" href="compilation-timeline.html">
 <link rel="import" href="dropdown-element.html">
 <link rel="import" href="deopt-links.html">
-<link rel="import" href="graph-pane.html">
+<link rel="import" href="../../../../packages/ui_utils/components/graph-pane.html">
 <link rel="import" href="ir-pane.html">
 <link rel="import" href="method-list.html">
 <link rel="import" href="open-file-button.html">
