Remove dependency on hydra.css from saga

--- a/irhydra/web/index.html
+++ b/irhydra/web/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:regular,bold,italic,thin,light,bolditalic,black,medium" type="text/css">
 
     <link rel="stylesheet" href="packages/irhydra/src/ui/ir-pane.css">
+    <link rel="stylesheet" href="packages/ui_utils/assets/xref.css">
     <link rel="stylesheet" href="css/hydra.css">
 
     <link rel="stylesheet" href="deps/fa/css/font-awesome.min.css">
