--- a/saga/web/index.html
+++ b/saga/web/index.html
@@ -26,8 +26,6 @@
   
   <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="hydra.css">
-
   <script src="packages/ui_utils/assets/jquery/js/jquery-2.0.3.js"></script>
   <script src="packages/ui_utils/assets/jquery/js/jquery-ui-1.10.4.js"></script>
 
@@ -35,6 +33,7 @@
   <link rel="stylesheet" href="packages/ui_utils/assets/bootstrap/css/bootstrap-theme.min.css">
   <script src="packages/ui_utils/assets/bootstrap/js/bootstrap.js"></script>
 
+  <link rel="stylesheet" href="packages/ui_utils/assets/xref.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 
