[saga] drop BS dependency

--- a/saga/web/index.html
+++ b/saga/web/index.html
@@ -23,26 +23,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="scaffolded-by" content="https://github.com/google/stagehand">
   <title>Saga</title>
-  
+
   <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
   <script src="packages/ui_utils/assets/jquery/js/jquery-2.0.3.js"></script>
   <script src="packages/ui_utils/assets/jquery/js/jquery-ui-1.10.4.js"></script>
 
-  <link rel="stylesheet" href="packages/ui_utils/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="packages/ui_utils/assets/bootstrap/css/bootstrap-theme.min.css">
-  <script src="packages/ui_utils/assets/bootstrap/js/bootstrap.js"></script>
-
+  <link rel="stylesheet" href="packages/ui_utils/assets/tooltip.css">
   <link rel="stylesheet" href="packages/ui_utils/assets/xref.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+<!--
     <div class="flexbox-container">
       <pre id="code"></pre>
       <div><div id="graph"></div></div>
       <pre id="ir"></pre>
     </div>
+-->
   <script type="application/dart" src="main.dart"></script>
   <script data-pub-inline src="packages/browser/dart.js"></script>
 </body>
