--- a/saga/web/index.html
+++ b/saga/web/index.html
@@ -28,10 +28,19 @@
 
   <script src="packages/ui_utils/assets/jquery/js/jquery-2.0.3.js"></script>
   <script src="packages/ui_utils/assets/jquery/js/jquery-ui-1.10.4.js"></script>
-
-  <link rel="stylesheet" href="packages/ui_utils/assets/tooltip.css">
-  <link rel="stylesheet" href="packages/ui_utils/assets/xref.css">
-  <link rel="stylesheet" href="styles.css">
+  
+  <style>
+    body {
+      font-family: RobotoDraft, sans-serif;
+      color: #333;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -webkit-tap-highlight-color: rgba(0,0,0,0);
+      -webkit-touch-callout: none;
+    }  
+  </style>
 </head>
 
 <body>
