Fix code.asm parsing on Windows
- support parsing of addresses printed using %p format: on Windows its
[A-F0-9]{8} and [A-F0-9]{16} rather then 0x[a-f0-9]{8} and 0x[a-f0-9]{16}
printed on Linux and Mac;
- remove line ending normalization, V8 has been correctly opening code trace
files in binary mode since February 2015 - so original line endings should be
correctly retained in the code.asm output. This effectively means that we are
dropping support for compilation artifacts produced by old versions of node on
Windows (which is arguably not a big loss).

--- a/irhydra/web/index.html
+++ b/irhydra/web/index.html
@@ -129,6 +129,26 @@
           splash.parentNode.removeChild(splash);
         }
       }
+
+      // This is a helper method for loading files without
+      // line-endings normalization because FileReader.readAsBinaryString
+      // is not exposed to Dart.
+      function readAsBinaryString(file, cb) {
+        console.log("Reading %s", file.name);
+        var reader = new FileReader();
+
+        reader.onloadend = function () {
+          console.log("  ... %s loaded (%d characters)",
+                      file.name,
+                      reader.result.length);
+          cb(reader.result);
+        };
+
+        // Fallback to readAsText if for some strange reason
+        // readAsBinaryString is not available.
+        var method = reader.readAsBinaryString || reader.readAsText;
+        method.call(reader, file);
+      }
     </script>
     <hydra-app></hydra-app>
     <script type="application/dart">export "package:polymer/init.dart";</script>
