Fix issue #53 assuming that https://codereview.chromium.org/2573653002/ is landed.

--- a/irhydra/lib/src/ui/hydra.html
+++ b/irhydra/lib/src/ui/hydra.html
@@ -30,6 +30,13 @@
                  opened="{{sourceAnnotatorFailed}}">
     </paper-toast>
 
+    <paper-toast text="ERROR: You are using a version of V8 that is incompatible with IRHydra.
+                       See console for more details."
+                 duration="3600000"
+                 opened="{{newPositionsWithoutStartPos}}">
+    </paper-toast>
+
+
     <paper-toast text="WARNING: code.asm contains TurboFan generated code.
                       IR view is not supported for TurboFan.
                       See console for details."
