Some simple support for TurboFan generated code.

--- a/irhydra/lib/src/ui/ir-pane.html
+++ b/irhydra/lib/src/ui/ir-pane.html
@@ -18,7 +18,7 @@
         color: gold;
       }
     </style>
-    <div style="display: inline-block; position: relative;">
+    <div style="display: inline-block; position: relative; padding-bottom: 2em;">
       <table id="rows" class="irpane"></table>
     </div>
   </template>
