--- a/irhydra/lib/src/ui/hydra.html
+++ b/irhydra/lib/src/ui/hydra.html
@@ -62,8 +62,10 @@
       <spinner-element id="spinner"></spinner-element>
       <template if="{{ir != null}}">
         <switching-scope active="{{activeTab}}" class="pane-controls">
-          <div when-ir class="tab-header"><a href="#ir">IR</a></div>
-          <div when-graph class="tab-header"><a href="#graph">GRAPH</a></div>
+          <template if="{{ir.blocks.isNotEmpty}}">
+            <div when-ir class="tab-header"><a href="#ir">IR</a></div>
+            <div when-graph class="tab-header"><a href="#graph">GRAPH</a></div>
+          </template>
           <template if="{{!sourcePath.isEmpty}}">
             <div when-source class="tab-header"><a href="#source">SOURCE</a></div>
           </template>
